--- a/css/style.scss
+++ b/css/style.scss
@@ -80,89 +80,598 @@
 [class*="cuboid"] .bm {
   top: 100%;
 }
+[class*="cylinder"] .tp {
+  transform: rotateX(90deg) translateY(-50%);
+}
+[class*="cylinder"] .bm {
+  transform: rotateX(-90deg) translateY(-50%);
+}
+[class*="cylinder"] .tp, [class*="cylinder"] .bm, [class*="cylinder"] .tp .photon-shader, [class*="cylinder"] .bm .photon-shader {
+  border-radius: 50%;
+}
+[class*="cylinder"] .bm {
+  top: 100%;
+}
 /* .cub-1 styles */
 .cub-1 {
-  transform:translate3D(0em, 0em, 0em) rotateX(-17deg) rotateY(56deg) rotateZ(deg);
+  transform:translate3D(0em, -0.3125em, -4.625em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   opacity:1;
-  width:20em;
+  width:30em;
   height:10em;
-  margin:-5em 0 0 -10em;
+  margin:-5em 0 0 -15em;
 }
 .cub-1 .ft {
-  transform:translateZ(15em);
+  transform:translateZ(0.5em);
 }
 .cub-1 .bk {
-  transform:translateZ(-15em) rotateY(180deg);
+  transform:translateZ(-0.5em) rotateY(180deg);
 }
 .cub-1 .rt, .cub-1 .lt {
-  width:30em;
+  width:1em;
   height:10em;
 }
 .cub-1 .tp, .cub-1 .bm {
-  width:20em;
-  height:30em;
+  width:30em;
+  height:1em;
 }
 .cub-1 .face {
   background-color:#FFFFFF;
 }
 /* .cub-2 styles */
 .cub-2 {
+  transform:translate3D(0em, -0.3125em, 9.3125em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   opacity:1;
-  width:20em;
-  height:2em;
-  margin-left: -10em;
-  transform: translate3D(0em, -5.975em, -7.524999999999999em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-  margin-top: -1em;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-.active {
-  transform: translate3D(0em, -5.975em, -7.525em) rotateX(20deg) rotateY(0deg) rotateZ(0deg);
-  top: 36.6%;
-  left: 589px;
-  margin-top: 105px;
+  width:30em;
+  height:10em;
+  margin:-5em 0 0 -15em;
 }
 .cub-2 .ft {
-  transform:translateZ(7.5em);
+  transform:translateZ(0.5em);
 }
 .cub-2 .bk {
-  transform:translateZ(-7.5em) rotateY(180deg);
+  transform:translateZ(-0.5em) rotateY(180deg);
 }
 .cub-2 .rt, .cub-2 .lt {
-  width:15em;
-  height:2em;
+  width:1em;
+  height:10em;
 }
 .cub-2 .tp, .cub-2 .bm {
-  width:20em;
-  height:15em;
+  width:30em;
+  height:1em;
 }
 .cub-2 .face {
   background-color:#FFFFFF;
 }
 /* .cub-3 styles */
 .cub-3 {
-  transform:translate3D(0em, -6.000000000000001em, 7.5em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  transform:translate3D(-14.5em, -0.3125em, 2.375em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
   opacity:1;
-  width:20em;
-  height:2em;
-  margin:-1em 0 0 -10em;
+  width:1em;
+  height:10em;
+  margin:-5em 0 0 -0.5em;
 }
 .cub-3 .ft {
-  transform:translateZ(7.5em);
+  transform:translateZ(6.5em);
 }
 .cub-3 .bk {
-  transform:translateZ(-7.5em) rotateY(180deg);
+  transform:translateZ(-6.5em) rotateY(180deg);
 }
 .cub-3 .rt, .cub-3 .lt {
+  width:13em;
+  height:10em;
+}
+.cub-3 .tp, .cub-3 .bm {
+  width:1em;
+  height:13em;
+}
+.cub-3 .face {
+  background-color:#FFFFFF;
+}
+/* .cub-4 styles */
+.cub-4 {
+  transform:translate3D(14.5em, -0.3125em, 2.3125em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  opacity:1;
+  width:1em;
+  height:10em;
+  margin:-5em 0 0 -0.5em;
+}
+.cub-4 .ft {
+  transform:translateZ(6.5em);
+}
+.cub-4 .bk {
+  transform:translateZ(-6.5em) rotateY(180deg);
+}
+.cub-4 .rt, .cub-4 .lt {
+  width:13em;
+  height:10em;
+}
+.cub-4 .tp, .cub-4 .bm {
+  width:1em;
+  height:13em;
+}
+.cub-4 .face {
+  background-color:#FFFFFF;
+}
+/* .cub-5 styles */
+.cub-5, .lid {
+  transform:translate3D(-7.5em, -6.25em, 2.320075757575758em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  opacity:1;
+  width:15em;
+  height:2em;
+  margin:-1em 0 0 -7.5em;
+  -webkit-transition: all 0.3s ease-in-out 220ms;
+  -moz-transition: all 0.3s ease-in-out 220ms;
+  -o-transition: all 0.3s ease-in-out 220ms;
+  transition: all 0.3s ease-in-out 220ms;
+}
+.cub-5.active {
+  top: 46.9%;
+  left: 589px;
+  transform: translate3D(-7.5em, -6.25em, 2.32008em) rotateX(0deg) rotateY(0deg) rotateZ(-20deg);
+}
+.cub-5 .ft {
+  transform:translateZ(7.5em);
+}
+.cub-5 .bk {
+  transform:translateZ(-7.5em) rotateY(180deg);
+}
+.cub-5 .rt, .cub-5 .lt {
   width:15em;
   height:2em;
 }
-.cub-3 .tp, .cub-3 .bm {
-  width:20em;
+.cub-5 .tp, .cub-5 .bm {
+  width:15em;
   height:15em;
 }
-.cub-3 .face {
+.cub-5 .face {
+  background-color:#FFFFFF;
+}
+/* .cub-6 styles */
+.cub-6 {
+  transform:translate3D(7.5em, -6.25em, 2.3125em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  opacity:1;
+  width:15em;
+  height:2em;
+  margin:-1em 0 0 -7.5em;
+}
+.cub-6 .ft {
+  transform:translateZ(7.5em);
+}
+.cub-6 .bk {
+  transform:translateZ(-7.5em) rotateY(180deg);
+}
+.cub-6 .rt, .cub-6 .lt {
+  width:15em;
+  height:2em;
+}
+.cub-6 .tp, .cub-6 .bm {
+  width:15em;
+  height:15em;
+}
+.cub-6 .face {
+  background-color:#FFFFFF;
+}
+/* .cyl-1 styles */
+.cyl-1 {
+  transform:translate3D(3.9375em, -7.5em, 2.0625em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+  opacity:1;
+  width:2.5em;
+  height:0.7em;
+  margin:-0.35em 0 0 -1.25em;
+}
+.cyl-1 .tp, .cyl-1 .bm {
+  width:2.5em;
+  height:2.5em;
+}
+.cyl-1 .side {
+  width:0.5956086859753749em;
+  height:0.7em;
+}
+.cyl-1 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 1.225em);
+}
+.cyl-1 .face, .cyl-1 .side {
+  background-color:#FFFFFF;
+}
+/* .cyl-2 styles */
+.cyl-2, .switch {
+  cursor: pointer;
+  transform:translate3D(4.791666666666666em, -9.041666666666666em, 2.0416666666666665em) rotateX(0deg) rotateY(0deg) rotateZ(35deg);
+  opacity:1;
+  width:0.7em;
+  height:4em;
+  margin:-2em 0 0 -0.35em;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.switch.active {
+  left: 574px;
+  transform: translate3D(4.79167em, -9.04167em, 2.04167em) rotateX(0deg) rotateY(0deg) rotateZ(-35deg);
+}
+.cyl-2 .tp, .cyl-2 .bm {
+  width:0.7em;
+  height:0.7em;
+}
+.cyl-2 .side {
+  width:0.18477043207310495em;
+  height:4em;
+}
+.cyl-2 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 0.32499999999999996em);
+}
+.cyl-2 .face, .cyl-2 .side {
+  background-color:#FFFFFF;
+}
+
+.closer {
+  display: block;
+}
+
+/* .cyl-3 styles */
+.cyl-3 {
+  top: 57.3%;
+  left: 40.2%;
+  transform:translate3D(-4.083333333333334em, -5em, 1.9999999999999982em) rotateX(0deg) rotateY(0deg) rotateZ(20deg);
+  opacity:1;
+  width:1.5em;
+  height:5em;
+  margin:-2.5em 0 0 -0.75em;
+  -webkit-transition: all 0.3s ease-in-out 200ms;
+  -moz-transition: all 0.3s ease-in-out 200ms;
+  -o-transition: all 0.3s ease-in-out 200ms;
+  transition: all 0.3s ease-in-out 200ms;
+}
+.cyl-3.active {
+  top: 50%;
+  left: 50%;
+}
+.cyl-3 .tp, .cyl-3 .bm {
+  width:1.5em;
+  height:1.5em;
+}
+.cyl-3 .side {
+  width:0.36736521158522495em;
+  height:5em;
+}
+.cyl-3 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-3 .face, .cyl-3 .side {
+  background-color:#FFFFFF;
+}
+/* .cyl-4 styles */
+.cyl-4 {
+  transform:translate3D(-2.749999999999999em, -7.84090909090909em, 1.9621212121212133em) rotateX(0deg) rotateY(0deg) rotateZ(40deg);
+  opacity:1;
+  width:1.5em;
+  height:2em;
+  margin:-1em 0 0 -0.75em;
+  top: 57.1%;
+  left: 40.3%;
+  -webkit-transition: all 0.3s ease-in-out 200ms;
+  -moz-transition: all 0.3s ease-in-out 200ms;
+  -o-transition: all 0.3s ease-in-out 200ms;
+  transition: all 0.3s ease-in-out 200ms;
+}
+.cyl-4.active {
+  top: 50%;
+  left: 50%;
+}
+.cyl-4 .tp, .cyl-4 .bm {
+  width:1.5em;
+  height:1.5em;
+}
+.cyl-4 .side {
+  width:0.36736521158522495em;
+  height:2em;
+}
+.cyl-4 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-4 .face, .cyl-4 .side {
+  background-color:#FFFFFF;
+}
+/* .cyl-5 styles */
+.cyl-5 {
+  transform:translate3D(-1.454545454545455em, -8.91666666666667em, 1.9621212121212097em) rotateX(0deg) rotateY(0deg) rotateZ(60deg);
+  opacity:1;
+  width:1.5em;
+  height:2em;
+  margin:-1em 0 0 -0.75em;
+  top: 57%;
+  left: 40.4%;
+  -webkit-transition: all 0.3s ease-in-out 200ms;
+  -moz-transition: all 0.3s ease-in-out 200ms;
+  -o-transition: all 0.3s ease-in-out 200ms;
+  transition: all 0.3s ease-in-out 200ms;
+}
+.cyl-5.active {
+  top: 50%;
+  left: 50%;
+}
+.cyl-5 .tp, .cyl-5 .bm {
+  width:1.5em;
+  height:1.5em;
+}
+.cyl-5 .side {
+  width:0.36736521158522495em;
+  height:2em;
+}
+.cyl-5 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-5 .face, .cyl-5 .side {
+  background-color:#FFFFFF;
+}
+/* .cyl-6 styles */
+.cyl-6 {
+  transform:translate3D(0.5833333333333333em, -9.583333333333332em, 2em) rotateX(0deg) rotateY(0deg) rotateZ(80deg);
+  opacity:1;
+  width:1.5em;
+  height:3em;
+  margin:-1.5em 0 0 -0.75em;
+  top: 57%;
+  display: block;
+  left: 485px;
+  -webkit-transition: all 0.3s ease-in-out 200ms;
+  -moz-transition: all 0.3s ease-in-out 200ms;
+  -o-transition: all 0.3s ease-in-out 200ms;
+  transition: all 0.3s ease-in-out 200ms;
+}
+
+.cyl-6.active {
+  transform:translate3D(0.5833333333333333em, -9.583333333333332em, 2em) rotateX(0deg) rotateY(0deg) rotateZ(80deg);
+  top: 50%;
+  left: 50%;
+}
+
+.cyl-6 .tp, .cyl-6 .bm {
+  width:1.5em;
+  height:1.5em;
+}
+.cyl-6 .side {
+  width:0.36736521158522495em;
+  height:3em;
+}
+.cyl-6 .s0 {
+  transform: rotateY(12.857142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s1 {
+  transform: rotateY(38.57142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s2 {
+  transform: rotateY(64.28571428571429deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s3 {
+  transform: rotateY(90deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s4 {
+  transform: rotateY(115.71428571428572deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s5 {
+  transform: rotateY(141.42857142857144deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s6 {
+  transform: rotateY(167.14285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s7 {
+  transform: rotateY(192.85714285714286deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s8 {
+  transform: rotateY(218.57142857142858deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s9 {
+  transform: rotateY(244.2857142857143deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s10 {
+  transform: rotateY(270deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s11 {
+  transform: rotateY(295.7142857142857deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s12 {
+  transform: rotateY(321.4285714285714deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .s13 {
+  transform: rotateY(347.1428571428571deg) translate3D(-50%, 0, 0.725em);
+}
+.cyl-6 .face, .cyl-6 .side {
   background-color:#FFFFFF;
 }
