--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body .count {
     background-color: lightgray;
     margin: 10px 0; }
 
-/* /!\ You need to add vendor prefixes in order to render the CSS properly (or simply use http://leaverou.github.io/prefixfree/) /!\ */
 #tridiv {
   perspective: 800px;
   position: absolute;
@@ -19,6 +18,7 @@ body .count {
   background: transparent; }
 
 .face {
+  background-color: rgba(0, 0, 0, 0.05882);
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4); }
 
 .scene, .shape, .face, .face-wrapper, .cr {
@@ -30,7 +30,11 @@ body .count {
   height: 80em;
   top: 50%;
   left: 50%;
-  margin: -40em 0 0 -40em; }
+  margin: -40em 0 0 -40em;
+  -webkit-transform: rotateX(-18deg) rotateY(-39deg);
+  -moz-transform: rotateX(-18deg) rotateY(-39deg);
+  -ms-transform: rotateX(-18deg) rotateY(-39deg);
+  transform: rotateX(-18deg) rotateY(-39deg); }
 
 .shape {
   top: 50%;
@@ -59,7 +63,8 @@ body .count {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.05882); }
 
 .side {
   left: 50%; }
@@ -211,10 +216,10 @@ body .count {
   width: 15em;
   height: 2em;
   margin: -1em 0 0 -7.5em;
-  -webkit-transition: all 0.1s ease-in-out 220ms;
-  -moz-transition: all 0.1s ease-in-out 220ms;
-  -o-transition: all 0.1s ease-in-out 220ms;
-  transition: all 0.1s ease-in-out 220ms; }
+  -webkit-transition: all 0.2s ease-in-out 220ms;
+  -moz-transition: all 0.2s ease-in-out 220ms;
+  -o-transition: all 0.2s ease-in-out 220ms;
+  transition: all 0.2s ease-in-out 220ms; }
 
 .cub-5.active {
   top: 46.9%;
@@ -332,10 +337,10 @@ body .count {
   width: 0.7em;
   height: 4em;
   margin: -2em 0 0 -0.35em;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out; }
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out; }
 
 .switch.active {
   left: 574px;
@@ -406,10 +411,10 @@ body .count {
   width: 1.5em;
   height: 5em;
   margin: -2.5em 0 0 -0.75em;
-  -webkit-transition: all 0.1s ease-in-out 200ms;
-  -moz-transition: all 0.1s ease-in-out 200ms;
-  -o-transition: all 0.1s ease-in-out 200ms;
-  transition: all 0.1s ease-in-out 200ms; }
+  -webkit-transition: all 0.2s ease-in-out 200ms;
+  -moz-transition: all 0.2s ease-in-out 200ms;
+  -o-transition: all 0.2s ease-in-out 200ms;
+  transition: all 0.2s ease-in-out 200ms; }
 
 .cyl-3.active {
   top: 50%;
@@ -477,10 +482,10 @@ body .count {
   margin: -1em 0 0 -0.75em;
   top: 57.1%;
   left: 40.3%;
-  -webkit-transition: all 0.1s ease-in-out 200ms;
-  -moz-transition: all 0.1s ease-in-out 200ms;
-  -o-transition: all 0.1s ease-in-out 200ms;
-  transition: all 0.1s ease-in-out 200ms; }
+  -webkit-transition: all 0.2s ease-in-out 200ms;
+  -moz-transition: all 0.2s ease-in-out 200ms;
+  -o-transition: all 0.2s ease-in-out 200ms;
+  transition: all 0.2s ease-in-out 200ms; }
 
 .cyl-4.active {
   top: 50%;
@@ -548,10 +553,10 @@ body .count {
   margin: -1em 0 0 -0.75em;
   top: 57%;
   left: 40.4%;
-  -webkit-transition: all 0.1s ease-in-out 200ms;
-  -moz-transition: all 0.1s ease-in-out 200ms;
-  -o-transition: all 0.1s ease-in-out 200ms;
-  transition: all 0.1s ease-in-out 200ms; }
+  -webkit-transition: all 0.2s ease-in-out 200ms;
+  -moz-transition: all 0.2s ease-in-out 200ms;
+  -o-transition: all 0.2s ease-in-out 200ms;
+  transition: all 0.2s ease-in-out 200ms; }
 
 .cyl-5.active {
   top: 50%;
@@ -620,10 +625,10 @@ body .count {
   top: 57%;
   display: block;
   left: 485px;
-  -webkit-transition: all 0.1s ease-in-out 200ms;
-  -moz-transition: all 0.1s ease-in-out 200ms;
-  -o-transition: all 0.1s ease-in-out 200ms;
-  transition: all 0.1s ease-in-out 200ms; }
+  -webkit-transition: all 0.2s ease-in-out 200ms;
+  -moz-transition: all 0.2s ease-in-out 200ms;
+  -o-transition: all 0.2s ease-in-out 200ms;
+  transition: all 0.2s ease-in-out 200ms; }
 
 .cyl-6.active {
   transform: translate3D(0.58333em, -9.58333em, 2em) rotateX(0deg) rotateY(0deg) rotateZ(80deg);
