--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@ body {
   left: 50%;
   width: 0;
   height: 0;
-  transform-origin: 50%; }
+  transform-origin: 50%;
+  background: -webkit-linear-gradient(left, #7B6E6E 0%, #595D62 1%, #B9BCC2 66%, #3E4042 100%); }
   .shape .face {
     background-color: rgba(0, 0, 0, 0.05882);
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
@@ -54,15 +55,15 @@ body {
       left: 0;
       top: 0;
       width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.05882); }
+      height: 100%; }
   .shape .face-wrapper .face {
     left: 100%;
     width: 100%;
     height: 100%; }
   .shape .side {
     left: 50%;
-    height: 100%; }
+    height: 100%;
+    background: -webkit-linear-gradient(left, #7B6E6E 0%, #595D62 1%, #B9BCC2 66%, #3E4042 100%); }
 
 [class*="cuboid"] .ft, [class*="cuboid"] .bk {
   width: 100%;
@@ -139,7 +140,8 @@ body {
     width: 30em;
     height: 1em; }
   .cub-2 .face {
-    background-color: #FFFFFF; }
+    background-color: #FFFFFF;
+    background: -webkit-linear-gradient(left, #7B6E6E 0%, #595D62 1%, #B9BCC2 66%, #3E4042 100%); }
 
 /* .cub-3 styles */
 .cub-3 {
@@ -193,7 +195,8 @@ body {
   -o-transition: all 0.2s ease-in-out 220ms;
   transition: all 0.2s ease-in-out 220ms; }
   .cub-5 .ft, .lid .ft {
-    transform: translateZ(7.5em); }
+    transform: translateZ(7.5em);
+    background: -webkit-linear-gradient(left, #7B6E6E 0%, #5D6166 1%, #7D8186 66%, #96999F 100%); }
   .cub-5 .bk, .lid .bk {
     transform: translateZ(-7.5em) rotateY(180deg); }
   .cub-5 .rt, .cub-5 .lt, .lid .rt, .lid .lt {
@@ -218,7 +221,8 @@ body {
   height: 2em;
   margin: -1em 0 0 -7.5em; }
   .cub-6 .ft {
-    transform: translateZ(7.5em); }
+    transform: translateZ(7.5em);
+    background: -webkit-linear-gradient(left, #A7ABB0 0%, #A8ABB1 1%, #B1B4BA 31%, #4B4D4F 89%); }
   .cub-6 .bk {
     transform: translateZ(-7.5em) rotateY(180deg); }
   .cub-6 .rt, .cub-6 .lt {
