--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ body {
   width: 0;
   height: 0;
   transform-origin: 50%;
+  background: -webkit-linear-gradient(left, #7B6E6E 0%,#595D62 1%,#B9BCC2 66%,#3E4042 100%);
 
   .face {
     background-color: rgba(0, 0, 0, 0.0588235);
@@ -64,7 +65,8 @@ body {
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.0588235);
+
+        
     }
   }
 
@@ -77,11 +79,15 @@ body {
   .side {
     left: 50%;
     height: 100%;
+    background: -webkit-linear-gradient(left, #7B6E6E 0%,#595D62 1%,#B9BCC2 66%,#3E4042 100%)
+
   }
 }
 
 //All cubes
 [class*="cuboid"] .ft, [class*="cuboid"] .bk {
+    
+
   width: 100%;
   height: 100%;
 }
@@ -171,9 +177,12 @@ body {
 
   .ft {
     transform:translateZ(0.5em);
+
+
   }
 
   .bk {
+
     transform:translateZ(-0.5em) rotateY(180deg);
   }
 
@@ -189,6 +198,7 @@ body {
 
   .face {
     background-color:#FFFFFF;
+    background: -webkit-linear-gradient(left, #7B6E6E 0%,#595D62 1%,#B9BCC2 66%,#3E4042 100%);
   }
 }
 
@@ -219,6 +229,7 @@ body {
   }
 
   .face {
+
     background-color:#FFFFFF;
   }
 }
@@ -233,6 +244,8 @@ body {
 
   .ft {
     transform:translateZ(6.5em);
+
+
   }
 
   .bk {
@@ -268,6 +281,7 @@ body {
 
   .ft {
     transform:translateZ(7.5em);
+    background: -webkit-linear-gradient(left, #7B6E6E 0%,#5D6166 1%,#7D8186 66%,#96999F 100%);
   }
 
   .bk {
@@ -304,6 +318,7 @@ body {
 
   .ft {
     transform:translateZ(7.5em);
+      background: -webkit-linear-gradient(left, #A7ABB0 0%,#A8ABB1 1%,#B1B4BA 31%,#4B4D4F 89%);
   }
 
   .bk {
