--- a/css/style.scss
+++ b/css/style.scss
@@ -148,6 +148,7 @@ body {
 
   .ft {
     transform:translateZ(0.5em);
+    border-right: none;
   }
 
   .bk {
@@ -157,6 +158,7 @@ body {
   .rt, .lt {
     width:1em;
     height:10em;
+    border-left: none;
   }
 
   .tp, .bm {
@@ -188,6 +190,7 @@ body {
   .rt, .lt {
     width:1em;
     height:10em;
+    border-right: none;
   }
 
   .tp, .bm {
@@ -250,6 +253,8 @@ body {
   .rt, .lt {
     width:13em;
     height:10em;
+    border-left: none;
+    border-right: none;
   }
 
   .tp, .bm {
