--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body {
   .cub-1 .lt {
     width: 1em;
     height: 10em;
-    border-left: none;
+    border-right: none;
     background: -webkit-linear-gradient(left, #5E5E6B 5%, #5E5E6B -6%, #5E5E6B 31%, #5E5E6B 89%) !important; }
   .cub-1 .tp, .cub-1 .bm {
     width: 30em;
@@ -151,7 +151,8 @@ body {
   .cub-2 .lt {
     width: 1em;
     height: 10em;
-    background: -webkit-linear-gradient(left, #4B4D4F 5%, #4B4D4F -6%, #4B4D4F 31%, #4D4F51 89%) !important; }
+    background: -webkit-linear-gradient(left, #4B4D4F 5%, #4B4D4F -6%, #4B4D4F 31%, #4D4F51 89%) !important;
+    border-right: none; }
   .cub-2 .tp, .cub-2 .bm {
     width: 30em;
     height: 1em; }
@@ -189,7 +190,8 @@ body {
   height: 10em;
   margin: -5em 0 0 -0.5em; }
   .cub-4 .ft {
-    transform: translateZ(6.5em); }
+    transform: translateZ(6.5em);
+    border-right: none; }
   .cub-4 .bk {
     transform: translateZ(-6.5em) rotateY(180deg); }
   .cub-4 .rt, .cub-4 .lt {
