--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+#activeUsers, #clickCount {
+    font-size: 26px;
+    font-weight: bold;
+    line-height: 26px;
+  }
+
 body {
   background-color: #fbfbf8;
 
