--- a/css/style.scss
+++ b/css/style.scss
@@ -79,9 +79,7 @@ body {
       left: 0;
       top: 0;
       width: 100%;
-      height: 100%;
-
-        
+      height: 100%;     
     }
   }
 
@@ -94,15 +92,11 @@ body {
   .side {
     left: 50%;
     height: 100%;
-    
-
   }
 }
 
 //All cubes
 [class*="cuboid"] .ft, [class*="cuboid"] .bk {
-    
-
   width: 100%;
   height: 100%;
 }
@@ -163,12 +157,10 @@ body {
     transform:translateZ(0.5em);
     border-right: none;
     background: -webkit-linear-gradient(left, #32323A 5%,#313145 -6%,#52525D 31%,#29292C 89%);
-
   }
 
   .bk {
     transform:translateZ(-0.5em) rotateY(180deg);
-
   }
 
   .rt{
@@ -176,24 +168,25 @@ body {
     height:10em;
     border-left: none;
   }
+
   .lt{
     width:1em;
     height:10em;
     border-right: none;
     background: -webkit-linear-gradient(left, #5E5E6B 5%,#5E5E6B -6%,#5E5E6B 31%,#5E5E6B 89%)!important;
   }
+
   .tp, .bm {
     width:30em;
     height:1em;
       background: -webkit-linear-gradient(left, #32323A 5%, #313145 -6%, #52525D 31%, #29292C 89%);
-}
-
-
   }
 
   .face {
     background-color:#FFFFFF;
   }
+}
+
 
 
 /* .cub-2 styles */
@@ -206,24 +199,19 @@ body {
 
   .ft {
     transform:translateZ(0.5em);
-
-
-
   }
 
   .bk {
-
     transform:translateZ(-0.5em) rotateY(180deg);
   }
 
-  .rt{
+  .rt {
     width:1em;
     height:10em;
     border-right: none;
-
   }
 
-  .lt{
+  .lt {
     width:1em;
     height:10em;
     background: -webkit-linear-gradient(left, #4B4D4F 5%,#4B4D4F -6%,#4B4D4F 31%,#4D4F51 89%)!important; 
@@ -262,7 +250,6 @@ body {
     width:13em;
     height:10em;
     background: -webkit-linear-gradient(left, #32323A 5%,#313145 -6%,#52525D 31%,#29292C 89%);
-
   }
 
   .tp, .bm {
@@ -272,7 +259,6 @@ body {
   }
 
   .face {
-
     background-color:#FFFFFF;
   }
 }
@@ -287,9 +273,8 @@ body {
 
   .ft {
     transform:translateZ(6.5em);
-    border-right:none;
-
-
+    border-right: none;
+    background-color: #4B4D4F;
   }
 
   .bk {
@@ -302,13 +287,7 @@ body {
     height:10em;
     border-left: none;
     border-right: none;
-    background: -webkit-linear-gradient(left, #4B4D4F 5%,#4B4D4F -6%,#7E7E8B 31%,#5E5E6B 89%);
-    
-  }
-
-
-  .face {
-    background-color:#FFFFFF;
+    background: -webkit-linear-gradient(left, #4B4D4F 5%,#4B4D4F -6%,#7E7E8B 31%,#5E5E6B 89%); 
   }
 }
 
@@ -327,7 +306,6 @@ body {
   .ft {
     transform:translateZ(7.5em);
     background: -webkit-linear-gradient(left, #606469 0%,#64686D 1%,#6F7378 31%,#989BA1 89%);
-
   }
 
   .bk {
@@ -345,11 +323,13 @@ body {
     height:15em;
     background: -webkit-linear-gradient(left, #090A0B 0%,#64676E 1%,#7B8084 31%,#A4A4A5 89%);
   }
+
   .bm{
     width:15em;
     height:15em;
     background: -webkit-linear-gradient(left, #090A0B 0%,#3A3B3F 1%,#3A3C3D 31%,#5E5E6B 89%);
   }
+
   .face {
     background-color:#FFFFFF;
   }
