--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,36 @@
 * {
   box-sizing: border-box; }
 
+.cf:before,
+.cf:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */ }
+
+.cf:after {
+  clear: both; }
+
 body {
-  margin-top: 40px;
   background-color: #fbfbf8; }
-  body .sitetitle h1 {
-    float: left;
-    font-size: 50px;
-    font-family: 'Arialblack';
-    margin-left: 20%;
-    color: gray; }
+  body .sitetitle {
+    margin: 5% auto 0;
+    width: 328px; }
+    body .sitetitle span {
+      font-size: 50px;
+      font-family: 'Arialblack';
+      font-weight: bold;
+      float: left; }
+    body .sitetitle span.title-useless {
+      color: gray; }
+    body .sitetitle span.title-box {
+      color: orange; }
   body .count {
     box-sizing: border-box;
     width: 200px;
-    float: right;
-    margin: 30px 40px 0 0; }
+    position: absolute;
+    bottom: 0px;
+    left: 40px; }
     body .count .count-box {
       width: 200px;
       padding: 10px;
@@ -389,13 +405,13 @@ body {
   display: block;
   box-shadow: none; }
   .closer .face {
-    background-color: #904fa7; }
+    background: -webkit-linear-gradient(left, #9a530a 5%, #743e08 -6%, #dd7f1f 31%, #b4610d 89%); }
 
 .closer.active {
   top: 50%;
   left: 50%; }
   .closer.active .face {
-    background-color: #904fa7; }
+    background: -webkit-linear-gradient(left, #9a530a 5%, #743e08 -6%, #dd7f1f 31%, #b4610d 89%); }
 
 /* .cyl-3 styles */
 .cyl-3 {
